Updated config and about

--- a/_layouts/about.liquid
+++ b/_layouts/about.liquid
@@ -48,7 +48,7 @@ layout: default
       {% include news.liquid limit=true %}
     {% endif %}
 
-    <!-- Latest posts -->
+    {% comment %} <!-- Latest posts -->
     {% if site.latest_posts.enabled %}
       <h2>
         <a href="{{ '/blog/' | relative_url }}" style="color: inherit">latest posts</a>
@@ -62,7 +62,7 @@ layout: default
         <a href="{{ '/publications/' | relative_url }}" style="color: inherit">selected publications</a>
       </h2>
       {% include selected_papers.liquid %}
-    {% endif %}
+    {% endif %} {% endcomment %}
 
     <!-- Social -->
     {% if page.social %}
